# chip-emu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  debug.sh
include/: chip8.hpp
src/: chip8.cpp  hexdemo.py  main.cpp
test/: chipout.txt  chipoutput.txt  test.cpp
